--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background-image: url('https://images.pexels.com/photos/604684/pexels-photo-604684.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2');
     background-color: #0f0f0f;
     color: #333;
+    text-align: center;
+    padding: 2rem;
     text-align: center;
     padding: 2rem;
     display: flex;
@@ -10,7 +13,7 @@ body {
 }
 
 h1 {
-    color: #ff66b2;
+    color: #cc66ff;
     font-size: 2.5rem;
     margin-bottom: 2rem; 
 }
@@ -18,45 +21,55 @@ h1 {
 .container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; 
-    gap: 20px; 
-    width: 100%;
-    max-width: 1200px; }
+    justify-content: space-between;
+    gap: 2rem; 
+    width: 350px;
+    height: auto;
+    padding: 2rem;
+ }
 
 form {
-    background-color: #252525;
-    padding: 2rem;
-    max-width: 250px;
-    margin: 10px;
-    border-radius: 2rem;
-    width: calc(50% - 20px); 
+    background-color: #252525e9;
+    padding: 5rem;
+    border-radius: 50%;
+    width: 200px;
+    height: auto;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 label {
     font-size: 1.2rem;
-    color: #ff3399;
+    color: #e46df7;
+    font-weight: bold;
+}
+
+h2 {
+    font-size: 1.2rem;
+    color: #7d6ff6;
+    margin-bottom: 1rem;
+    font-weight: bold;
 }
 
 input[type="number"], input[type="submit"] {
     padding: 10px;
     margin: 10px 0;
     font-size: 1rem;
-    border-radius: 5px;
-    border: 2px solid #ff66b2;
+    border-radius: 20%;
+    border: 2px solid #e46df7;;
     background-color: #232323;
     color: #fff;
 }
 
 input[type="submit"] {
-    background-color: #9a0650;
+    background-color: #e56df7e4;;
     cursor: pointer;
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
 input[type="submit"]:hover {
     transform: scale(1.2); 
-    background-color: #ff057e;
+    background-color: #7a05ff;
+    border: none;
 }
 
 
