slight css edits, delete commented out part

--- a/styles.css
+++ b/styles.css
@@ -1,115 +1,92 @@
 body {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  background-image: url("https://images.pexels.com/photos/695644/pexels-photo-695644.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
-  background-color: #0f0f0f;
-  color: #333;
+  background-color: #141414;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: #ffffff;
   text-align: center;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-
-  background-color: #0f0f0f;
-  color: #333;
-  text-align: center;
-  padding: 2rem;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 h1 {
-  color: #ff1ef0;
-  font-size: 4.5rem;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  color: #fe3f9e;
+  font-size: 3.5rem; 
+  margin-bottom: 2rem; 
+  letter-spacing: 4px;
 }
 
 .container {
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  flex-direction: row;
+  align-items: center;
   gap: 2rem;
+  flex-wrap: wrap;
 }
 
 form {
-  background-color: #252525e9;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
-  text-align: center;
-  flex-direction: column;
-  border-radius: 5%;
-  width: 250px;
-  height: auto;
-  padding: 1rem;
-  gap: 1rem;
-  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-label {
-  font-size: 1.2rem;
-  color: #e46df7;
-  font-weight: bold;
-  margin-bottom: 1rem;
-}
-
-h2 {
-  font-size: 1.2rem;
-  color: #7d6ff6;
-  font-weight: bold;
-  padding: 14px;
-  margin-bottom: 1rem;
-  font-size: 1rem;
-  border-radius: 3rem;
-  border: solid 2px #0048ff6f;
-  background-color: #001eff2a;
-  color: #fff;
-}
-
-input[type="number"],
-input[type="submit"],
-label {
-  padding: 14px;
-  font-size: 1rem;
-  border-radius: 3rem;
-  border: solid 2px #ff63cb8c;
-  background-color: #6517572a;
-  color: #fff;
-}
-
-input[type="submit"] {
-  background-color: #ff25c88c;
-  cursor: pointer;
-
-  transition: transform 0.3s ease, background-color 0.3s ease;
-}
-
-input[type="submit"]:hover {
-  transform: scale(1.2);
-  background-color: #7a05ff;
-  border: none;
-}
-
-p {
-  font-size: 1.5rem;
-  color: #ff1ef0;
-  text-align: center;
-  flex-grow: wrap;
-  background-color: #252525e9;
-  padding: 1rem;
-  border-radius: 2rem;
-  height: auto;
-  width: 300px;
-  font-size: 1.5rem;
-  color: #ff1ef0;
-}
-
-.resultCircle {
-  display: flex;
-  background-color: #0f030caf;
-  flex-direction: column;
   align-items: center;
+  width: 260px;
+  background: #242424;
   padding: 2rem;
-  border-radius: 5rem;
+  border-radius: 2rem;
+  transition: box-shadow 0.8s ease;
+}
+
+form:hover {
+  box-shadow: inset 0 0 5px #ff6ab4;
+}
+
+form label,
+form h2 {
+  color: #fedaec;
+  font-weight: 700;
+  letter-spacing: 1px;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+form input[type="number"] {
+  width: 90%;
+  background-color: #2b2b2b;
+  border-radius: 0.8rem;
+  padding: 1rem;
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+  border: 2px solid #ffa2d0;
+  color: #fff;
+  outline: none;
+}
+
+form input[type="number"]:focus {
+  transform: scale(1.05);
+  border-color: #ff6ab4;
+  box-shadow: 0 0 5px #ff6ab4cc;
+}
+
+form input[type="submit"] {
+  background-color: #d83486;
+  width: 90%;
+  padding: 1rem 1.5rem;
+  border-radius: 1rem;
+  color: white;
+  font-size: 1rem;
+  font-weight: 700;
+  border: none;
+  text-align: center;
+  letter-spacing: 0.6px;
+  transition: all 0.4s ease;
+}
+
+form input[type="submit"]:hover {
+  transform: scale(1.1);
+  background-color: #6445ef;
+}
+
+.resultCircle p {
+  font-size: 1.6rem;
+  color: #fff;
+  font-weight: 700;
 }
